# orasi

./: .explore.dft.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MULTI_TENANCY_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  cspell.config.yaml  deny.toml  docker-bake.hcl  justfile  test_custom_validation.rs
app/orasi-agent/: Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  docker-compose.yml  prometheus.yml
app/orasi-agent/config/: agent.toml
app/orasi-agent/docs/: QUERY_EXECUTION.md
app/orasi-agent/examples/: basic_agent_example.rs  query_example.rs
app/orasi-agent/src/: agent.rs  cluster.rs  config.rs  discovery.rs  error.rs  health.rs  http.rs  indexing.rs  ingestion.rs  lib.rs  main.rs  metrics.rs  processing.rs  service_discovery.rs  state.rs  tests.rs  types.rs
app/orasi-bridge/: CONFIGURATION_MANAGEMENT.md  Cargo.toml  METRICS_STANDARDIZATION.md  QUERY_PLAN_GENERATION.md  README.md  SERVER_CONNECTION_HANDLING.md  TELEMETRY_PIPELINE.md  TODO.md  build.rs  deps.txt  test_plugins.sh
app/orasi-bridge/config/: .gitignore
app/orasi-bridge/docs/: HEALTH_WATCH.md
app/orasi-bridge/examples/: config_management_test.rs  grpc_example.rs  health_watch_example.rs  integrated_grpc_example.rs  plugin_discovery_test.rs  query_plan_test.rs  real_integration_example.rs  streaming_telemetry_example.rs  telemetry_pipeline_test.rs
app/orasi-bridge/plugins/: README.md
app/orasi-bridge/proto/: bridge.proto  health.proto
app/orasi-bridge/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  openapi.rs  rest.rs  server.rs  types.rs
app/orasi-cli/: Cargo.toml  README.md
app/orasi-cli/src/: lib.rs
app/orasi-gateway/: Cargo.toml  Dockerfile  METRICS.md  README.md  RESPONSE_TIME_CALCULATION.md  TODO.md  docker-compose.yml  prometheus.yml
app/orasi-gateway/examples/: basic_gateway_example.rs  consul_example.rs  health_checker_example.rs  metrics_example.rs  response_time_demo.rs  service_discovery_example.rs
app/orasi-gateway/src/: config.rs  error.rs  gateway.rs  http.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  proxy.rs  rate_limiter.rs  routing.rs  service_discovery.rs  tls.rs  types.rs
app/orasi-web/: Cargo.toml  README.md  build.sh  dev.sh  index.html
app/orasi-web/src/: app.rs  lib.rs
connectors/deltalake/: Cargo.toml  README.md
connectors/deltalake/src/: config.rs  connector.rs  error.rs  exporter.rs  lib.rs  metrics.rs  reader.rs  schema.rs  transaction.rs  writer.rs
connectors/hudi/: Cargo.toml  README.md
connectors/hudi/src/: config.rs  connector.rs  error.rs  exporter.rs  lib.rs  metrics.rs  reader.rs  schema.rs  table.rs  writer.rs
connectors/kafka/: Cargo.toml  README.md
connectors/kafka/examples/: kafka_connector_example.rs  simple_kafka_example.rs
connectors/kafka/src/: cluster.rs  config.rs  connector.rs  consumer.rs  error.rs  exporter.rs  lib.rs  metrics.rs  producer.rs  topic.rs
connectors/s3-parquet/: Cargo.toml  README.md
connectors/s3-parquet/src/: config.rs  connector.rs  error.rs  exporter.rs  lib.rs  reader.rs  writer.rs
connectors/snowflake/: Cargo.toml  README.md
connectors/snowflake/src/: config.rs  connector.rs  error.rs  exporter.rs  lib.rs  reader.rs  writer.rs
crates/bridge-api/: Cargo.toml  build.rs
crates/bridge-api/examples/: grpc_example.rs  integrated_grpc_example.rs  real_integration_example.rs
crates/bridge-api/proto/: bridge.proto
crates/bridge-api/src/: component_handlers.rs  config.rs  config_service.rs  error.rs  grpc.rs  handlers.rs  health_monitoring_integration.rs  lib.rs  main.rs  metrics.rs  middleware.rs  openapi.rs  proto.rs  query_engine_integration.rs  query_service.rs  rest.rs  server.rs  status_service.rs  types.rs
crates/bridge-auth/: Cargo.toml  README.md  TODO.md
crates/bridge-auth/src/: api_keys.rs  auth.rs  lib.rs  middleware.rs  oauth.rs
crates/bridge-core/: Cargo.toml  README.md  build.rs
crates/bridge-core/config/: .gitignore
crates/bridge-core/examples/: advanced_config_example.rs  advanced_processors_example.rs  basic_bridge_example.rs  delta_lake_demo.rs  otlp_receiver_test.rs  pipeline_integration_example.rs  real_exporters_example.rs  simple_mock_test.rs
crates/bridge-core/proto/: opentelemetry.proto.collector.logs.v1.proto  opentelemetry.proto.collector.metrics.v1.proto  opentelemetry.proto.collector.trace.v1.proto  (+4 more)
crates/ingestion/: ADVANCED_FEATURES_COMPLETION.md  Cargo.toml  PROTOCOL_COMPLETION.md  README.md  TODO.md
crates/multi-tenancy/: Cargo.toml
crates/query-engine/: Cargo.toml  README.md  TODO.md
crates/schema-registry/: CONFIGURATION.md  Cargo.toml  OTEP.md  README.md  TODO.md
crates/streaming-processor/: Cargo.toml  README.md  TODO.md
examples/: Cargo.toml  README.md  custom_validation_example.rs  datafusion_integration_example.rs  datafusion_standalone_example.rs  delta_lake_exporter_example.rs  minimal_datafusion_example.rs  multi_tenancy_example.rs  streaming_queries_example.rs
examples/auth/: README.md  auth_example.rs
examples/bridge-api/: README.md  bridge_api_example.rs  http_server_example.rs  schema_registry_shutdown_example.rs
examples/connectors/: README.md  delta_lake_example.rs  hudi_example.rs  iceberg_example.rs  kafka_connector_example.rs  kafka_example.rs  real_delta_lake_example.rs  s3_parquet_example.rs  snowflake_example.rs
examples/core/: README.md  basic_usage.rs  config_management_example.rs
examples/ingestion/: README.md  minimal_otap_example.rs  otap_example.rs  otap_receiver_example.rs  phase4_production_ready.rs  receiver_example.rs  simple_receiver_example.rs  streaming_exporter_example.rs
examples/query-engine/: README.md  advanced_query_engine_example.rs  datafusion_query_example.rs  delta_lake_integration_example.rs  query_engine_example.rs  real_delta_lake_example.rs
examples/streaming/: README.md  batch_compression_example.rs  streaming_processor_example.rs  streaming_processor_integration.rs
infra/controller/: Cargo.toml  README.md  TODO.md
testing/data-generator/: Cargo.toml  README.md  TODO.md
testing/test-runner/: Cargo.toml
(+559 files in other folders)
