[package]
name = "orasi-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line utilities for OpenTelemetry Data Lake Bridge"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["opentelemetry", "cli", "tools", "telemetry"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core dependencies
bridge-core = { path = "../../crates/bridge-core" }
ingestion = { path = "../../crates/ingestion" }
query-engine = { path = "../../crates/query-engine" }
streaming-processor = { path = "../../crates/streaming-processor" }
schema-registry = { path = "../../crates/schema-registry" }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Terminal output
colored = "2.0"
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
test-log = "0.2"
