[package]
name = "orasi-gateway"
version = "0.1.0"
edition = "2021"
description = "Orasi Gateway for routing traffic and servicing external requests"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["orasi", "gateway", "routing", "load-balancing", "api"]
categories = ["web-programming", "asynchronous", "network-programming"]

[dependencies]
# Core dependencies
bridge-core = { path = "../../crates/bridge-core" }
bridge-api = { path = "../../crates/bridge-api" }

# HTTP and gRPC dependencies
axum = "0.7"
tonic = "0.11"
prost = "0.12"
hyper = { version = "1.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br"] }
tower-load = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Load balancing and service discovery
etcd-client = "0.12"
consul = "0.4"

# Health checks
health = "0.2"
tonic-health = "0.11"

# Rate limiting and caching
governor = "0.6"
moka = { version = "0.12", features = ["future"] }

# TLS and security
rustls = "0.21"
rustls-pemfile = "1.0"

# HTTP client for backend communication
reqwest = { version = "0.12", features = ["json", "stream"] }

# Circuit breaker
failsafe = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
test-log = "0.2"
mockall = "0.12"
