lints.workspace = true

[package]
name = "orasi-gateway"
version = "0.1.0"
edition = "2021"
description = "Orasi Gateway for routing traffic and servicing external requests"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["orasi", "gateway", "routing", "load-balancing", "api"]
categories = ["web-programming", "asynchronous", "network-programming"]

[[bin]]
name = "orasi-gateway"
path = "src/main.rs"

[[example]]
name = "basic_gateway_example"
path = "examples/basic_gateway_example.rs"

[[example]]
name = "service_discovery_example"
path = "examples/service_discovery_example.rs"

[[example]]
name = "consul_example"
path = "examples/consul_example.rs"

[dependencies]
# Core dependencies
bridge-core = { path = "../../crates/bridge-core" }
bridge-api = { path = "../orasi-bridge" }

# HTTP and gRPC dependencies
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-tls = "0.5"
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-br"] }
tower-load = "0.3"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Load balancing and service discovery
etcd-client = "0.12"
consul = "0.4"

# Health checks
health = "0.2"
tonic-health = { workspace = true }

# Rate limiting and caching
governor = "0.6"
moka = { version = "0.12", features = ["future"] }

# TLS and security
rustls = "0.21"
rustls-pemfile = "1.0"

# HTTP client for backend communication
reqwest = { version = "0.12", features = ["json", "stream"] }

# URL parsing
url = "2.5"

# Circuit breaker
failsafe = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
test-log = "0.2"
mockall = "0.12"
