lints.workspace = true

# https://github.com/leptos-rs/awesome-leptos?tab=readme-ov-file#libraries
[package]
name = "orasi-ui"
version = "0.1.0"
edition = "2021"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
web-sys = "0.3"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thaw = { version = "0.4.8", features = ["csr", "hydrate", "ssr"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

