lints.workspace = true

[package]
name = "kafka-connector"
version = "0.1.0"
edition = "2021"
description = "Apache Kafka connector for OpenTelemetry Data Lake Bridge"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["opentelemetry", "kafka", "lakehouse", "connector", "telemetry", "streaming"]
categories = ["database", "asynchronous", "data-structures"]

[dependencies]
# Core dependencies
bridge-core = { path = "../../crates/bridge-core" }
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Kafka specific dependencies
kafka = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
test-log = "0.2"
