[package]
name = "bridge-api"
version = "0.1.0"
edition = "2021"
description = "REST/gRPC API server for OpenTelemetry Data Lake Bridge"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["opentelemetry", "api", "grpc", "rest", "telemetry"]
categories = ["web-programming", "asynchronous", "network-programming"]

[features]
default = []
openapi = ["utoipa/axum_extras", "utoipa-swagger-ui/axum"]

[dependencies]
# Core dependencies
bridge-core = { path = "../bridge-core" }
ingestion = { path = "../ingestion" }
# query-engine = { path = "../query-engine" }  # Temporarily disabled due to dependency conflicts
streaming-processor = { path = "../streaming-processor" }
schema-registry = { path = "../schema-registry" }
bridge-auth = { path = "../bridge-auth" }

# HTTP and gRPC dependencies
axum = "0.7"
tonic = "0.11"
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1.0"
jsonwebtoken = "9.0"
dashmap = "5.0"
once_cell = "1.0"
hex = "0.4"
md5 = "0.7"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = "0.21"
# opentelemetry-proto = { version = "0.2", features = ["gen-protoc"] }  # Temporarily disabled due to grpcio-sys compilation issues

# OpenAPI documentation
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# System monitoring
sysinfo = "0.30"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
test-log = "0.2"
