lints.workspace = true

[package]
name = "bridge-core"
version = "0.1.0"
edition = "2021"
description = "Core bridge logic and orchestration for OpenTelemetry Data Lake Bridge"
license = "Apache-2.0"
repository = "https://github.com/chytirio/orasi"
keywords = ["opentelemetry", "data-lake", "observability", "bridge"]
categories = ["observability", "data-processing"]

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry dependencies
opentelemetry = "0.22"
opentelemetry-http = "0.10"
opentelemetry-otlp = "0.15"
opentelemetry-semantic-conventions = "0.14"
opentelemetry-proto = "0.3"

# Async runtime and networking
tonic = "0.11"
prost = "0.12"
hyper = { version = "1.1", features = ["full"] }
axum = "0.7"
tower = "0.5"

# Data processing and serialization
# Temporarily commented out to fix compilation
# arrow = "56.0"
# parquet = "56.0"
# avro-rs = "0.13"
# deltalake = "0.27"
# iceberg-rust = "0.4"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Configuration and validation
config = "0.14"
validator = { version = "0.16", features = ["derive"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID and identifiers
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }

# Compression and encoding
zstd = "0.13"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Testing
criterion = "0.5"
mockall = "0.12"

# Additional dependencies for bridge-core
num_cpus = "1.16"
rand = "0.8"
async-trait = "0.1"

# Authentication
bridge-auth = { path = "../bridge-auth" }



[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
tempfile = "3.8"

[[example]]
name = "basic_usage"
path = "../../examples/core/basic_usage.rs"

[[example]]
name = "http_server_example"
path = "../../examples/bridge-api/http_server_example.rs"

[[example]]
name = "real_delta_lake_example"
path = "../../examples/connectors/real_delta_lake_example.rs"

[[example]]
name = "auth_example"
path = "../../examples/auth/auth_example.rs"
